; ModuleID = '/home/carl/AnghaBench/openssl/apps/extr_req.c_req_check_len.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/extr_req.c_req_check_len.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bio_err = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [60 x i8] c"string is too short, it needs to be at least %d bytes long\0A\00", align 1
@.str.1 = private unnamed_addr constant [63 x i8] c"string is too long, it needs to be no more than %d bytes long\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @req_check_len to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @req_check_len(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %6, align 4
  %9 = icmp sgt i32 %8, 0
  br i1 %9, label %10, label %18

10:                                               ; preds = %3
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* %6, align 4
  %13 = icmp slt i32 %11, %12
  br i1 %13, label %14, label %18

14:                                               ; preds = %10
  %15 = load i32, i32* @bio_err, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @BIO_printf(i32 %15, i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str, i64 0, i64 0), i32 %16)
  store i32 0, i32* %4, align 4
  br label %30

18:                                               ; preds = %10, %3
  %19 = load i32, i32* %7, align 4
  %20 = icmp sge i32 %19, 0
  br i1 %20, label %21, label %29

21:                                               ; preds = %18
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* %7, align 4
  %24 = icmp sgt i32 %22, %23
  br i1 %24, label %25, label %29

25:                                               ; preds = %21
  %26 = load i32, i32* @bio_err, align 4
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @BIO_printf(i32 %26, i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.1, i64 0, i64 0), i32 %27)
  store i32 0, i32* %4, align 4
  br label %30

29:                                               ; preds = %21, %18
  store i32 1, i32* %4, align 4
  br label %30

30:                                               ; preds = %29, %25, %14
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i32 @BIO_printf(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
